<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Six Stones</string>
    
    <string name="stone_num_label">Number of Stones to Pull</string>
    <string name="defaultStoneNum">1</string>
    <string name="stone">Stone</string>
    <string name="neutral">Pull Neutral Stone</string>
    
    <string name="pull_stones">Pull Stones</string>
    <string name="pull_stones_lead">Pull Stones with Lead</string>
    
    <string name="pulled">Pulled</string>
    <string name="leadStone">Lead</string>
    <string name="neutralStone">Neutral</string>
    
    <string name="action_settings">Settings</string>
    <string name="stoneSettings">Stone Settings</string>
    <string name="useCanary">Canary as Clear</string>

</resources>
