<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.syrus.kane.sixstones.MainActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stone_num_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/stoneCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/stoneCounterValue"
                    android:max="5" />

                <TextView
                    android:id="@+id/stoneCounterValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/stoneCounter"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/defaultStoneNum"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neutral"
                    android:layout_alignBaseline="@+id/neutralStone"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/neutralStone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pull_stones"
            style="@style/AppButton" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pull_stones_lead"
            android:visibility="gone"
            style="@style/AppButton" />

        <LinearLayout
            android:id="@+id/stones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/stonesNeutral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <RelativeLayout
                        android:id="@+id/rlNeutral"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/llNeutral"
                        android:layout_marginRight="10dp"
                        android:background="@color/grayLight"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >
                        
                        <LinearLayout
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:gravity="center_horizontal"
			                android:orientation="vertical" >

	                        <TextView
	                            android:id="@+id/textView5"
	                            style="@style/AppWhiteHeader"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:text="@string/neutralStone" />
	
	                        <TextView
	                            android:id="@+id/textView6"
	                            style="@style/AppWhiteHeaderNumber"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content" />
	                    </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
		                android:id="@+id/llNeutral"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center_horizontal"
		                android:orientation="vertical"
	                    android:layout_toRightOf="@+id/rlNeutral" >

	                    <ImageView
	                        android:id="@+id/stoneNeutral"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:contentDescription="@string/stone"
	                        android:src="@drawable/empty" />
	                </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stonesLead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <RelativeLayout
                        android:id="@+id/rlLead"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/llLead"
                        android:layout_marginRight="10dp"
                        android:background="@color/gray"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/AppWhiteHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/leadStone" />

                    </RelativeLayout>

                    <LinearLayout
		                android:id="@+id/llLead"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center_horizontal"
		                android:orientation="vertical"
                    	android:layout_toRightOf="@+id/rlLead" >
                        
	                    <ImageView
	                        android:id="@+id/stoneLead"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:contentDescription="@string/stone"
	                        android:src="@drawable/empty" />
	                </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stonesPulled"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <RelativeLayout
                        android:id="@+id/rlPull"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/llPulls"
                        android:layout_marginRight="10dp"
                        android:background="@color/grayDark"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/AppWhiteHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/pulled" />

                    </RelativeLayout>
                    
                    <LinearLayout
		                android:id="@+id/llPulls"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:gravity="center_horizontal"
		                android:orientation="vertical"
                    	android:layout_toRightOf="@+id/rlPull" >

		                <LinearLayout
		                    android:id="@+id/llPulls1"
	                        android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center_horizontal"
	                    	android:layout_toRightOf="@+id/rlPull" >
		
		                    <ImageView
		                        android:id="@+id/stone1Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		
		                    <ImageView
		                        android:id="@+id/stone2Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		
		                    <ImageView
		                        android:id="@+id/stone3Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		                </LinearLayout>
		
		                <LinearLayout
		                    android:id="@+id/llPulls2"
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:gravity="center_horizontal" >
		
		                    <ImageView
		                        android:id="@+id/stone4Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		
		                    <ImageView
		                        android:id="@+id/stone5Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		
		                    <ImageView
		                        android:id="@+id/stone6Lead"
		                        android:layout_width="wrap_content"
		                        android:layout_height="wrap_content"
		                        android:contentDescription="@string/stone"
		                        android:src="@drawable/empty" />
		                </LinearLayout>
		            </LinearLayout>
	            </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>